# pypackage-poetry-cookiecutter

./: README.md  cookiecutter.json
hooks/: post_gen_project.sh
{{cookiecutter.project_slug}}/: .envrc  .gitignore  README.md  mkdocs.yml  noxfile.py  pyproject.toml  tox.ini
{{cookiecutter.project_slug}}/.github/workflows/: main.yml  pr.yml  publish.yml  quality.yml  tests.yml
{{cookiecutter.project_slug}}/docs/: conf.py  index.md  index.rst
{{cookiecutter.project_slug}}/docs/source/: apidoc.rst  installation.rst
